Cambios en referecias archivos locales

--- a/resources/Configuration.properties
+++ b/resources/Configuration.properties
@@ -12,9 +12,9 @@ DATABASE_PSWD=Macpio21
 DATABASE_PORT=5432
 
 #Directorios
-DIR_WORK=C:\\Users\\emormau\\Documents\\empre\\db\\data\\work\\
-DIR_INPUT=C:\\Users\\emormau\\Documents\\empre\\db\\data\\input\\
-DIR_OUTPUT=C:\\Users\\emormau\\Documents\\empre\\db\\data\\output\\
+DIR_WORK=\\db\\data\\work\\
+DIR_INPUT=\\db\\data\\input\\
+DIR_OUTPUT=\\db\\data\\output\\
 
 #Copyright
 AUTHOR=Mauricio
